--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -3,5 +3,123 @@
   "robes": "Халаты",
   "towels": "Полотенца",
   "about": "О нас",
-  "contact": "Контакты"
+  "contact": "Контакты",
+  "liked_title": "Избранное",
+  "liked_empty": "Пока нет избранных товаров.",
+  "remove": "Удалить",
+  "cart_title": "Корзина",
+  "cart_empty": "Корзина пуста",
+  "footer": {
+    "company": "Компания",
+    "aboutUs": "О нас",
+    "careers": "Вакансии",
+    "ourTeam": "Наша команда",
+    "projects": "Проекты",
+    "helpCenter": "Центр помощи",
+    "discord": "Дискорд",
+    "twitter": "Твиттер",
+    "github": "Гитхаб",
+    "contactUs": "Связаться с нами",
+    "resources": "Ресурсы",
+    "blog": "Блог",
+    "newsletter": "Новости",
+    "freeProducts": "Бесплатные продукты",
+    "affiliateProgram": "Партнерская программа",
+    "products": "Продукты",
+    "templates": "Шаблоны",
+    "uiKits": "UI Наборы",
+    "icons": "Иконки",
+    "mockups": "Макеты",
+    "rights": "Все права защищены."
+  },
+    "carousel": {
+    "slide1": {
+      "title": "Коллекция полотенец",
+      "description": "Мягкие, натуральные и современные. Идеальны для семьи.",
+      "button": "Перейти в каталог"
+    },
+    "slide2": {
+      "title": "Халаты премиум-класса",
+      "description": "Элегантный комфорт на каждый день.",
+      "button": "Смотреть халаты"
+    },
+    "slide3": {
+      "title": "SAIPOV GROUP",
+      "description": "10+ лет доверия от крупных брендов. Мы заботимся о качестве.",
+      "button": "Узнать больше"
+    }
+  },
+  "products": {
+    "towels": "ПОЛОТЕНЦЕ",
+    "robes": "ХАЛАТЫ",
+    "more": "БОЛЬШЕ ТОВАРОВ"
+  },
+  "about2": {
+    "title": "О НАС",
+    "description1": "Компания основана в 2012 году. Основатель — Саипов Музаффар.",
+    "description2": "Благодаря качеству и надёжности, Saipov Group — ваш надёжный партнёр.",
+    "description3": "Мы внедряем новые технологии и расширяем ассортимент."
+  },
+  "reviews": {
+    "title": "Отзывы клиентов"
+  },
+  "clients": {
+    "title": "Наши Клиенты"
+  },
+  "robes2": {
+  "title": "Халаты",
+  "sort": "Сортировка",
+  "sortNameAsc": "По алфавиту (A–Z)",
+  "sortNameDesc": "По алфавиту (Z–A)",
+  "sortPriceAsc": "По цене (мин → макс)",
+  "sortPriceDesc": "По цене (макс → мин)",
+  "minPrice": "Мин. цена",
+  "maxPrice": "Макс. цена",
+  "from": "от",
+  "to": "до",
+  "noResults": "Нет халатов по выбранным критериям."
+},
+  "towels2": {
+    "title": "Полотенца",
+    "sortLabel": "Сортировка",
+    "minPrice": "Мин. цена",
+    "maxPrice": "Макс. цена",
+    "sortOptions": {
+      "nameAsc": "По алфавиту (A–Z)",
+      "nameDesc": "По алфавиту (Z–A)",
+      "priceAsc": "По цене (мин → макс)",
+      "priceDesc": "По цене (макс → мин)"
+    },
+    "noProducts": "Нет товаров по выбранным критериям."
+  },
+    "about3": {
+    "title": "О компании Saipov Group",
+    "description": "Компания основана в 2012 году. Основатель — Саипов Музаффар. За эти годы компания успешно сотрудничала с такими крупными фирмами, как Yoyo Store, Yaskanamu, Modern Fashion, Parisa Home. Благодаря опыту, качеству и надёжности, компания Saipov Group зарекомендовала себя как надёжный партнёр на рынке. Мы стремимся не только к высокому качеству продукции, но и к долгосрочным и доверительным отношениям с нашими клиентами.",
+    "testimonialsTitle": "Наши клиенты и отели",
+    "testimonialsSubtitle": "Отзывы отелей о наших продуктах",
+    "testimonials": {
+      "hyatt": "Идеальные полотенца и халаты — роскошные и мягкие!",
+      "hilton": "Гостям нравится премиальное качество!",
+      "wyndham": "Элегантно, надёжно и комфортно.",
+      "international": "Чистая роскошь. Рекомендуем!",
+      "lotte": "Продукты премиум-класса для премиум-сервиса.",
+      "radisson": "Комфорт и стиль в идеальном сочетании.",
+      "marriott": "Лучшее решение для удовлетворения гостей."
+    }
+  },
+  "contact2": {
+  "title": "Свяжитесь с нами",
+  "name": "Ваше имя",
+  "email": "Ваша эл. почта",
+  "phone": "Ваш номер телефона",
+  "message": "Ваше сообщение",
+  "send_message": "Отправить сообщение",
+  "roles": {
+    "customer_support": "Поддержка клиентов",
+    "sales_manager": "Менеджер по продажам",
+    "marketing_lead": "Руководитель маркетинга",
+    "logistics_coordinator": "Координатор логистики"
+  }
+}
+
 }
