--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -11,28 +11,28 @@
   "cart_empty": "Корзина пуста",
   "remove2": "Удалить",
   "footer": {
-    "company": "Компания",
-    "aboutUs": "О нас",
-    "careers": "Вакансии",
-    "ourTeam": "Наша команда",
-    "projects": "Проекты",
-    "helpCenter": "Центр помощи",
-    "discord": "Дискорд",
-    "twitter": "Твиттер",
-    "github": "Гитхаб",
-    "contactUs": "Связаться с нами",
-    "resources": "Ресурсы",
-    "blog": "Блог",
-    "newsletter": "Новости",
-    "freeProducts": "Бесплатные продукты",
-    "affiliateProgram": "Партнерская программа",
-    "products": "Продукты",
-    "templates": "Шаблоны",
-    "uiKits": "UI Наборы",
-    "icons": "Иконки",
-    "mockups": "Макеты",
-    "rights": "Все права защищены."
-  },
+  "catalog": "КАТАЛОГ",
+  "clothing": "Одежда",
+  "shoes": "Обувь",
+  "accessories": "Аксессуары",
+  "priceCalc": "Расчет стоимости",
+  "info": "ИНФОРМАЦИЯ",
+  "blog": "Блог",
+  "contacts": "Контакты",
+  "delivery": "Доставка",
+  "payment": "Оплата",
+  "faq": "FAQ",
+  "dev": "РАЗРАБОТКА САЙТА",
+  "messengers": "МЕССЕНДЖЕРЫ",
+  "socials": "НАШИ СОЦ.СЕТИ",
+  "subscribe": "ПОДПИСКА НА НОВОСТИ",
+  "subscribeDesc": "Будьте в курсе скидок и новостей",
+  "email": "Ваш email",
+  "privacyAgree": "Подписываясь на рассылку вы соглашаетесь с обработкой персональных данных",
+  "privacyPolicy": "ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ",
+  "userAgreement": "ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ",
+  "rights": "Все права защищены."
+},
     "carousel": {
     "slide1": {
       "title": "Коллекция полотенец",
