--- a/i18n/uz.json
+++ b/i18n/uz.json
@@ -11,28 +11,28 @@
   "cart_empty": "Savatchada hozircha hech narsa yo‘q.",
   "remove2": "O‘chirish",
   "footer": {
-    "company": "Kompaniya",
-    "aboutUs": "Biz haqimizda",
-    "careers": "Bo‘sh ish o‘rinlari",
-    "ourTeam": "Jamoamiz",
-    "projects": "Loyihalar",
-    "helpCenter": "Yordam markazi",
-    "discord": "Discord",
-    "twitter": "Twitter",
-    "github": "GitHub",
-    "contactUs": "Bog‘lanish",
-    "resources": "Resurslar",
-    "blog": "Blog",
-    "newsletter": "Yangiliklar",
-    "freeProducts": "Bepul mahsulotlar",
-    "affiliateProgram": "Hamkorlik dasturi",
-    "products": "Mahsulotlar",
-    "templates": "Shablonlar",
-    "uiKits": "UI to‘plamlar",
-    "icons": "Belgilar",
-    "mockups": "Makaplar",
-    "rights": "Barcha huquqlar himoyalangan."
-  },
+  "catalog": "KATALOG",
+  "clothing": "Xalatlar",
+  "shoes": "Sochiqlar",
+  "accessories": "Aksessuarlar",
+  "priceCalc": "Narxni hisoblash",
+  "info": "MA'LUMOT",
+  "blog": "Biz haqimizda",
+  "contacts": "Kontaktlar",
+  "delivery": "Yetkazib berish",
+  "payment": "To'lov",
+  "faq": "FAQ",
+  "dev": "SAYT ISHLAB CHIQILDI",
+  "messengers": "MESSENJERLAR",
+  "socials": "IJTIMOIY TARMOQLAR",
+  "subscribe": "YANGILIKLARGA OBUNA BO‘LING",
+  "subscribeDesc": "Chegirmalar va yangiliklardan xabardor bo‘ling",
+  "email": "Email manzilingiz",
+  "privacyAgree": "Obuna bo‘lish orqali siz shaxsiy ma'lumotlarni qayta ishlashga rozilik bildirasiz",
+  "privacyPolicy": "MAXFIYLIK SIYOSATI",
+  "userAgreement": "FOYDALANUVCHI KELISHUVI",
+  "rights": "Barcha huquqlar himoyalangan."
+},
     "carousel": {
     "slide1": {
       "title": "Sochiq kolleksiyasi",
