--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -12,12 +12,11 @@
   "remove2": "Удалить",
   "footer": {
   "catalog": "КАТАЛОГ",
-  "clothing": "Одежда",
-  "shoes": "Обувь",
-  "accessories": "Аксессуары",
-  "priceCalc": "Расчет стоимости",
+  "clothing": "Главная",
+  "shoes": "Халаты",
+  "accessories": "Полотенцы",
+  "priceCalc": "О нас",
   "info": "ИНФОРМАЦИЯ",
-  "blog": "Блог",
   "contacts": "Контакты",
   "delivery": "Доставка",
   "payment": "Оплата",
