--- a/i18n/uz.json
+++ b/i18n/uz.json
@@ -1,7 +1,7 @@
 {
   "home": "Bosh sahifa",
-  "robes": "CardUi",
-  "towels": "CardUi robe",
+  "robes": "Xalatlar",
+  "towels": "Sochiqlar",
   "about": "Biz haqimizda",
   "contact": "Kontaktlar",
   "liked_title": "Sevimlilar",
