--- a/i18n/uz.json
+++ b/i18n/uz.json
@@ -51,7 +51,7 @@
   },
   "products": {
     "towels": "SOCHIQ",
-    "robes": "XALATLAR",
+    "robes": "Xalatlar",
     "more": "Ko‘proq mahsulotlar"
   },
   "about2": {
